# cosmos-api-index

./: README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/index/: __init__.py  __main__.py  config.py  errors.py  models.py  routes.py  server.py  utils.py
frontend/: .gitignore  config.js  package-lock.json  package.json  pnpm-lock.yaml  types.ts
frontend/app/: actions.ts  layout.tsx  page.tsx
frontend/app/api/: chat.ts
frontend/components/: chat-dialog.tsx  chat.tsx  create-index.tsx  file-manager.tsx  files.tsx  index-creator.tsx  main.tsx  providers.tsx
frontend/hooks/: use-indexes.ts  use-queries.ts
frontend/pages/api/embed/: [indexUuid].ts
frontend/types/: types.ts
